<resources>
    <string name="app_name">Xahive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_buzz_tab">BuzzTab</string>
    <string name="title_activity_honeycombs_tab">HoneycombsTab</string>
    <string name="title_activity_messages_tab">MessagesTab</string>
    <string name="title_activity_settings_tab">SettingsTab</string>
    <string name="buzz_title">buzz</string>
    <string name="honeycombs_title">honeycombs</string>
    <string name="contacts_title">Contacts</string>
    <string name="messages_title">Messages</string>
    <string name="settings_title">Settings</string>
    <string name="signup_loading">Signing up...</string>
    <string name="signup_text">sign up</string>
    <string name="back_text">back</string>
    <string name="back_button_title">BACK</string>
    <string name="submit_button">Submit</string>
    <string name="other">OTHER</string>
    <string name="terms_and_conditions_title">terms and conditions</string>
    <string name="login_signup_title">xahive</string>
    <string name="login_signup_button">Sign up for XAHIVE</string>
    <string name="login_button">LOG IN</string>
    <string name="signup_button">CREATE</string>
    <string name="login_forgot_password_button">Forgot Password?</string>
    <string name="anon_login_button">SIGN IN ANONYMOUSLY</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="alias_label">Alias</string>
    <string name="send_button">Send</string>
    <string name="forgot_password_title">Reset Password</string>
    <string name="forgot_security_blurb">For security purposes, a token is required to reset your account password.</string>
    <string name="enter_token_blurb">Enter the token from your email.</string>
    <string name="enter_token_button">GOT TOKEN</string>
    <string name="request_token_button">SUBMIT</string>
    <string name="token_request_invalid_email">Please enter a valid email address.</string>
    <string name="token_request_succeeded">The token request was successful. Please check your email and then return to the password reset screen.</string>
    <string name="token_request_failed">There was an error requesting a reset token. Please verify that your email address is correct.</string>
    <string name="password_reset_succeeded">Your password was reset successfully. Please log in with your new password.</string>
    <string name="password_reset_failed">There was an error resetting your password. Please verify your email address and the token and try again.</string>
    <string name="tokenLabel">TOKEN (PROVIDED IN EMAIL)</string>
    <string name="account_settings">Account Settings</string>
    <string name="friends_list">Friends List</string>
    <string name="blocked_users">Block List</string>
    <string name="change_hive">Change Hive</string>
    <string name="msg_preferences">MESSAGE PREFERENCES</string>
    <string name="allow_msgs">Allow Messages</string>
    <string name="allow_anon_msgs">Allow anonymous messages</string>
    <string name="allow_anon_buzz">Allow anonymous buzz</string>
    <string name="buzz_dist">BUZZ DISTANCE</string>
    <string name="listen_dist">LISTEN DISTANCE</string>
    <string name="display_picture">Display Picture</string>
    <string name="account_changes">ACCOUNT CHANGES</string>
    <string name="user_id_num">USER ID NUMBER</string>
    <string name="allias">ALIAS</string>
    <string name="logout">LOG OUT</string>
    <string name="new_email">NEW EMAIL</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="save_btn">SAVE</string>
    <string name="statistics_title">statistics</string>
    <string name="change_hive_title">change hive</string>
    <string name="changing_hive">Changing Hive …</string>
    <string name="userIDNumberHeader">USER ID NUMBER</string>
    <string name="userName">Alias</string>
    <string name="aliasHeader">ALIAS</string>
    <string name="emailHeader">EMAIL</string>
    <string name="joinHeader">JOIN</string>
    <string name="currentHiveHeader">CURRENT HIVE</string>
    <string name="loading">Loading…</string>
    <string name="adding">Adding…</string>
    <string name="availableHivesHeader">AVAILABLE HIVES</string>
    <string name="numBuzzesPostedHeader">NUMBER OF BUZZES POSTED</string>
    <string name="numPersonalMsgsSentHead">NUMBER OF PERSONAL MESSAGES SENT</string>
    <string name="hiveFileSizeLimitsHeader">HIVE FILE SIZE LIMITS</string>
    <string name="yourFileSizeAdditivesHeader">YOUR FILE SIZE ADDITIVES</string>
    <string name="stats_buzz">BUZZ</string>
    <string name="stats_messages">MESSAGES</string>
    <string name="contacts">contacts</string>
    <string name="blocked_users_title">blocked users</string>
    <string name="add_nav_button_title">ADD</string>
    <string name="new_button">NEW</string>
    <string name="statistics_item">Statistics</string>
    <string name="clear_cache_item">Clear Cache</string>
    <string name="disable_ads_item">Disable Ads</string>
    <string name="ads_disabled">Ads are disabled</string>
    <string name="help_item">Help</string>
    <string name="terms_conditions_item">Terms and Conditions</string>
    <string name="allow_non_contact_item">Allow non-contact buzz</string>
    <string name="allow_anon_buzz_item">Allow anonymous buzz</string>
    <string name="allow_non_contact_msg_item">Allow non-contact messages</string>
    <string name="allow_anon_msg_item">Allow anonymous messages</string>
    <string name="allow_msg_item">Allow messages</string>
    <string name="change_hive_item">Change Hive</string>
    <string name="change_hive_alias">Change Alias</string>
    <string name="change_hive_joining">Change Joining Method</string>
    <string name="enter_hive_join">Enter hive\'s password (or leave blank) to join</string>
    <string name="change_hive_password">Change Password</string>
    <string name="blocked_contacts_list_item">Blocked Contacts List</string>
    <string name="contacts_list_item">Contacts List</string>
    <string name="upload_new_avatar">UPLOAD AVATAR</string>
    <string name="email_changed">Email changed.</string>
    <string name="failed_change_setting">Failed to change Account Setting.</string>
    <string name="failed_add_contact">Failed to add Contact.</string>
    <string name="failed_add_hive">Failed to create Hive.</string>
    <string name="changed_setting">Account setting changed.</string>
    <string name="processing">Processing</string>
    <string name="failed_change_email">Failed to change email.</string>
    <string name="password_changed">Password changed.</string>
    <string name="failed_change_password">Failed to change password.</string>
    <string name="failed_check_already_purchased">Failed to check if you already purchased disabling ads.</string>
    <string name="failed_google_play_purchase">Failed to purchase from the Google Play store.</string>
    <string name="message">Message</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_email_msg">Please enter a different and valid email address.</string>
    <string name="confirm_password">Please confirm password to delete hive</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="wrong_password_msg">Please enter your account password.</string>
    <string name="invalid_password">Wrong Password</string>
    <string name="invalid_password_msg">Please enter a password that is at least 6 characters long.</string>
    <string name="passwords_mismatched_msg">Passwords do not match.</string>
    <string name="missing_information">Missing Information</string>
    <string name="missing_login_info_msg">Please enter a valid user name and password before logging in.</string>
    <string name="success">Success</string>
    <string name="cache_cleared_msg">The cache has been cleared successfully.</string>
    <string name="account_created_msg">Your account was created successfully.</string>
    <string name="invalid_info">Invalid Information</string>
    <string name="invalid_signup_info_msg">Please make sure you have entered a valid email address, and that your passwords match.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="please_wait">Please Wait</string>
    <string name="error">Error</string>
    <string name="uploading">Uploading Attachment …</string>
    <string name="downloading">Downloading Attachment …</string>
    <string name="uploading_avatar">Uploading Avatar …</string>
    <string name="avatar_update_failed">Updating avatar failed.</string>
    <string name="add_contact">Add Contact</string>
    <string name="create_hive">Create Hive</string>
    <string name="new_message_hint">Enter the new message name</string>
    <string name="new_message">New Message</string>
    <string name="new_mess">New</string>
    <string name="add_contact_success">Contact has been add successfully</string>
    <string name="add_hive_success">Hive has been create successfully</string>
    <string name="create">CREATE</string>
    <string name="enter_user_id">Enter the user ID to add as a contact</string>
    <string name="enter_user_id_message">Enter the user ID to add as a message</string>
    <string name="name">Name</string>
    <string name="terms_agree">I agree to the terms and conditions</string>
    <string name="terms_over_18">I am 18 years of age or older</string>
    <string name="terms_accept">Accept</string>
    <string name="terms_cancel">Cancel</string>
    <string name="terms_checkbox_error_message">You must agree to the terms and conditions and be 18 years of age or older to continue.</string>
    <string name="no_user_with_ID_found">No user with that ID was found.</string>
    <string name="no_text">Enter into empty field</string>
    <string name="delete_contact">Delete Contact?</string>
    <string name="confirm_remove_user">Are you sure you wish to remove this user from your contacts?</string>
    <string name="start_chat">Start Chat</string>
    <string name="enter_user_id_for_chat">Enter the ID of the user you would like to chat with:</string>
    <string name="unblock_user_title">"Unblock User?"</string>
    <string name="unblock_user_question">"Are you sure you wish to unblock this user?"</string>
    <string name="email_share_honeycomb_label">Honeycomb</string>
    <string name="alert_join_hive">We are unable to add you to the hive. Please try again later</string>
    <string name="reply_to_buzz_button">Reply to Buzz</string>
    <string name="add_to_contacts_button">Add to Contacts</string>
    <string name="message_user_button">Message User</string>
    <string name="block_user_button">Block User</string>
    <string name="report_buzz_button">Report Buzz</string>
    <string name="message_contact_button">Message Contact</string>
    <string name="share_buzz_button">Share Buzz</string>
    <string name="buzz_reported">Buzz reported.</string>
    <string name="xahive_buzz">xahive buzz</string>
    <string name="send_email_chooser_title">Send email:</string>
    <string name="share_message_button">Share Message</string>
    <string name="report_message_button">Report Message</string>
    <string name="decrypt_enter_pwd">Enter the password to decrypt this message:</string>
    <string name="save_decrypted_content">Save decrypted content.</string>
    <string name="apply_all_message">Apply to all messages from this user.</string>
</resources>