<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/xa_light_grey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decrypt_enter_pwd"
        android:id="@+id/textView"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_decrypted_content"
        android:id="@+id/saveCheckbox"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:checked="false" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_all_message"
        android:id="@+id/applyAllCheckbox"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:checked="false" />

    <EditText
        android:id="@+id/decryptionPasswordField"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>