<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@drawable/box_gray_border_radius">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/confirm_password"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_white"
        android:inputType="textPassword"
        android:paddingLeft="5dp" />

    <RelativeLayout
        android:id="@+id/rl_btm1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/xa_light_grey" />

        <View
            android:id="@+id/slide1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@color/xa_light_grey" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/slide1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/xa_dark_green"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/slide1"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/xa_dark_green"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_btm2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/xa_light_grey" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/xa_dark_green"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>