<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/aliasLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/old_password"
        android:textSize="17sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/oldField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_account"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textPassword|textNoSuggestions"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/newPasswordLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_password"
        android:textSize="17sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/newPasswordField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_account"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:inputType="textPassword|textNoSuggestions"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/confirmPasswordLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_new_password"
        android:textSize="17sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/confirmPasswordField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_account"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:inputType="textPassword|textNoSuggestions"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="15sp" />

</LinearLayout>