<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/t"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xa_dark_green"
    tools:context="ca.xahive.app.ui.activities.LoginActivity">

    <ca.xahive.app.ui.views.NavigationBar
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navBar"
        android:gravity="center"
        android:padding="40dp">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:src="@drawable/logo_login" />

        <TextView
            android:id="@+id/tokenRequiredTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/forgot_security_blurb"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tokenRequiredTextView"
            android:layout_marginTop="20dp"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/xa_login_signup_field_padding"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailField"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/requestTokenButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/enterTokenButton"
                android:layout_weight="1"
                android:background="@drawable/box_white_border"
                android:text="@string/request_token_button"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/enterTokenButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/box_white_border"
                android:text="@string/enter_token_button"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </LinearLayout>

    </RelativeLayout>


</FrameLayout>